latest chnage for insert

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kuñjī</title>
     <link rel="icon" href="%PUBLIC_URL%/logo.jpg" type="image/jpg" />
+    <script defer src="%PUBLIC_URL%/main.js"></script>
 
 </head>
 <body>
