--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kuñjī</title>
-    <link rel="icon" href="%PUBLIC_URL%/logo.jpg" type="image/jpg" />
-    <script defer src="%PUBLIC_URL%/main.js"></script>
+    <link rel="icon" href="%PUBLIC_URL%/logo.webp" type="image/jpg" />
 
 </head>
 <body>
